Release JDBC agent 0.2.7